--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>67Typer</title>
-
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="app" class="container">
-    <h1>6️⃣7️⃣Typer</h1>
+  <div class="container">
 
-    <!-- Settings -->
-    <div id="settings">
+    <!-- Title with number badges -->
+    <header id="siteHeader">
+      <h1 class="title-row">
+        <span class="badge">6</span>
+        <span class="badge">7</span>
+        <span class="title-word">TYPER</span>
+      </h1>
+    </header>
+
+    <!-- One-row settings (time + mode) -->
+    <div id="settings" class="settings-row">
       <div class="time-buttons">
-        <button type="button" onclick="setTime(10)">⏱️10 Seconds</button>
-        <button type="button" onclick="setTime(30)">⏱️30 Seconds</button>
-        <button type="button" onclick="setTime(67)">⏱️67 Seconds</button>
+        <button type="button" onclick="setTime(10)">⏱️ 10 Seconds</button>
+        <button type="button" onclick="setTime(30)">⏱️ 30 Seconds</button>
+        <button type="button" onclick="setTime(67)">⏱️ 67 Seconds</button>
       </div>
       <div id="modeButtons" class="mode-buttons">
         <button type="button" id="modeWordsBtn" onclick="setMode('words')" class="active">Words</button>
@@ -26,16 +32,16 @@
       </div>
     </div>
 
-    <!-- Timer -->
+    <!-- Full-width progress bar with large timer -->
     <div id="progressContainer">
       <div id="timeProgress"></div>
       <span id="timer">10</span>
     </div>
 
-    <!-- Typing text -->
+    <!-- Sentence text (your game fills this) -->
     <div id="sentence"></div>
 
-    <!-- Overlay -->
+    <!-- Game-over overlay -->
     <div id="overlay" style="display:none;">
       <div id="gameOverScreen">
         <h2>Time's Up!</h2>
@@ -47,8 +53,8 @@
       </div>
     </div>
 
-    <!-- Leaderboard -->
-    <div id="wrapleaderboard">
+    <!-- Leaderboard card -->
+    <div id="wrapleaderboard" class="card">
       <h2>🏆 Leaderboard</h2>
       <table>
         <thead>
@@ -60,18 +66,19 @@
         <tbody id="leaderboard"></tbody>
       </table>
     </div>
-  </div>
 
-  <!-- Username Modal (script repositions this into overlay) -->
-  <div id="usernameModal" class="modal" style="display:none;">
-    <div class="modal-content">
-      <h2>Enter your username</h2>
-      <input id="usernameInput" type="text" maxlength="12" placeholder="Enter username" />
-      <button type="button" id="usernameSubmit">Submit</button>
+    <!-- Username modal (script moves/controls visibility) -->
+    <div id="usernameModal" class="modal" style="display:none;">
+      <div class="modal-content">
+        <h2>Enter your username</h2>
+        <input id="usernameInput" type="text" maxlength="12" placeholder="Enter username" />
+        <button type="button" id="usernameSubmit">Submit</button>
+      </div>
     </div>
-  </div>
 
-  <!-- Script -->
-  <script type="module" src="./script.js?v=1"></script>
+  </div><!-- /.container -->
+
+  <!-- Your module script -->
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
