--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <body style="margin:0;min-height:100vh;background:url('./starrynight.gif') center/cover no-repeat;">
   <div class="container">
 
     <header id="siteHeader">
@@ -53,4 +54,5 @@
   <script type="module" src="./script.js"></script>
 </body>
 </html>
+
 
