--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="background"></div>
   <div class="container">
 
     <header id="siteHeader">
@@ -53,6 +54,7 @@
   <script type="module" src="./script.js"></script>
 </body>
 </html>
+
 
 
 
