--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body style="margin:0;min-height:100vh;position:relative;background:url('starnight.gif') center/cover no-repeat;">
   <div class="container">
 
     <header id="siteHeader">
@@ -53,6 +53,7 @@
   <script type="module" src="./script.js"></script>
 </body>
 </html>
+
 
 
 
